<?xml version="1.0" encoding="utf-8"?>
<resources translatable="false">
    <string name="virtual_image_app_name">Virtual Image</string>
    <string name="virtual_image_description">Virtual Image</string>

    <string name="virtual_image_exit">退出</string>

    <!--    Splash page-->
    <string name="virtual_image_error_desc" >RTM初始化出错</string>
    <string name="virtual_image_error_happened_click_to_refresh">出错了，再试一次</string>
    <!--    Room List-->
    <string name="virtual_image_please_create_a_room">请创建一个直播间</string>
    <string name="virtual_image_desc_create_room">创建直播间</string>
    <string name="virtual_image_desc_room_list_empty">房间列表为空</string>

    <!--    Create Room-->
    <string name="virtual_image_flip_camera">翻转相机</string>
    <string name="virtual_image_random_room_name">随机生成房间名</string>
    <string name="virtual_image_title_room_name">直播间名字:</string>
    <string name="virtual_image_live_begin">开始直播</string>
    <string name="virtual_image_beauty">美颜</string>
    <string name="virtual_image_setting">设置</string>

    <!--    ROOM-->
    <string name="virtual_image_game_center">游戏中心</string>
    <string name="virtual_image_end_call">终止连线</string>
    <string name="virtual_image_end_call_msg">终止与对方的连麦？</string>
    <string name="virtual_image_exit_game">退出游戏</string>
    <string name="virtual_image_exit_game_msg">确定要退出游戏？</string>
    <string name="virtual_image_exit_room">关闭直播间</string>
    <string name="virtual_image_exit_room_msg">关闭直播间后，将与其他用户断线。确定关闭？</string>
    <!--    权限-->
    <string name="virtual_image_permission_refused">APP运行所必需的权限被拒绝</string>
    <string name="virtual_image_permission_alert">此APP功能为视频通话，录音及摄像头权限为功能必需，是否继续？</string>


    <string name="virtual_image_remote_video">远端视频</string>
    <string name="room_mode_switch_error">AR模式下不支持捏脸，请切回Avatar模式</string>

</resources>
