<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/video_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_fg_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/virtual_image_ic_close_round"
        app:title=""
        tools:menu="@menu/virtual_image_menu_create_room"
        tools:title="@string/virtual_image_app_name" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/title_name_bg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/virtual_image_space_normal"
        android:alpha="0.3"
        android:background="?attr/colorOnSurface"
        app:layout_constraintBottom_toBottomOf="@id/btn_random_fg_create"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_random_fg_create"
        app:shapeAppearance="@style/VirtualImagecornerNormalStyle" />

    <TextView
        android:id="@+id/title_name_fg_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:alpha="0.5"
        android:text="@string/virtual_image_title_room_name"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@id/btn_random_fg_create"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_random_fg_create" />

    <TextView
        android:id="@+id/name_fg_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:textColor="@android:color/white"
        android:textIsSelectable="false"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="@id/btn_random_fg_create"
        app:layout_constraintEnd_toStartOf="@id/btn_random_fg_create"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@id/title_name_fg_create"
        app:layout_constraintTop_toTopOf="@id/btn_random_fg_create"
        tools:text="@string/virtual_image_app_name" />

    <ImageButton
        android:id="@+id/btn_random_fg_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/virtual_image_space_normal"
        android:layout_marginTop="@dimen/virtual_image_space_big"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/virtual_image_random_room_name"
        android:padding="@dimen/virtual_image_space_normal"
        android:src="@drawable/virtual_image_ic_dice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_fg_create" />

    <!--    Bottom-->
    <ImageButton
        android:id="@+id/btn_beauty_fg_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/virtual_image_beauty"
        android:src="@drawable/virtual_image_icon_launcher"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/btn_live_fg_create"
        app:layout_constraintEnd_toStartOf="@id/btn_live_fg_create"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_live_fg_create" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_live_fg_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:paddingHorizontal="@dimen/virtual_image_space_big"
        android:paddingVertical="@dimen/virtual_image_space_normal"
        android:text="@string/virtual_image_live_begin"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/preview_control_go_live_btn_bg" />

    <ImageButton
        android:id="@+id/btn_beauty"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:background="@drawable/preview_control_button_bg"
        android:contentDescription="@string/virtual_image_beauty"
        android:src="@drawable/preview_control_beauty_button"
        android:visibility="visible"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@id/btn_live_fg_create"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_live_fg_create"
        app:layout_constraintTop_toTopOf="@id/btn_live_fg_create" />


    <FrameLayout
        android:id="@+id/bottom_dialog_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>